# homelab

./: .ansible-lint  .ansible-lint.yaml  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .sops.yaml  .yamllint  .yamllint.yaml  AGENTS.md  Makefile  README.md  Taskfile.dist.yaml  Taskfile.yaml  ansible.cfg  debug.yml  dprint.json  example.inventory.yml  facts.yml  install  install.conf.yaml  lefthook.yaml  mise.toml  pyproject.toml  requirements.txt  requirements.yml  sync.yml  test.yml
.claude/: CLAUDE.md
.github/: renovate.json5
.taskfiles/: ansible.yaml  docker-runner.yaml  docker.yaml  setup.yaml  setup_darwin.yaml  sops.yaml
ansible/: requirements.yaml
docker/: compose.dev.yaml  compose.games.yaml  compose.home.yaml  compose.media.yaml  compose.utils.yaml  compose.yaml  sops.env
docs/: backup.md  customize.md  install.md  redundancy.md  setup.md  simple-install.md  storage-changes.md  troubleshoot.md
functions/: clight.sh  daily.sh  git.sh  pacman.sh  todo.sh  translate.sh
general/: .aliases  .bash_profile  .env.example  .profile  .vimrc  .xbindkeysrc  .xbindkeysrc-mouse  .xinitrc  .xprofile  .xsession  .zprofile  .zshrc
pacman/: aur.txt  base-aur.txt  base.txt  desktop-aur.txt  desktop.txt  dev.txt  ignore.txt  laptop-aur.txt  laptop.txt  latex.txt  native.txt  server-aur.txt  server.txt  setup.txt  vm-aur.txt  vm.txt  x11-aur.txt  x11.txt
provision/: requirements.yaml
scripts/: clean.sh  defaults.sh  setup.sh  sync.sh  system.sh
src/: .bash_profile  .bashrc  .editorconfig  .env.example  .profile  .xbindkeysrc-mouse
(+360 files in other folders)
